test/corpus/functions.txt
==================
Lambda with single param
==================

\x -> x

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier)))
      (explicit_arrow)
      (variable
        (identifier)))))

==================
Lambda with multiple params
==================

\x y z -> f x y z

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier))
        (param
          (identifier))
        (param
          (identifier)))
      (explicit_arrow)
      (application
        (variable
          (identifier))
        (argument
          (variable
            (identifier)))
        (argument
          (variable
            (identifier)))
        (argument
          (variable
            (identifier)))))))

==================
Lambda with typed param
==================

\(x:Int) -> x

---

(source_file
  (script
    (lambda
      (params
        (param
          (typing
            (identifier)
            (variable
              (identifier)))))
      (explicit_arrow)
      (variable
        (identifier)))))

==================
Lambda with multiple typed params
==================

\(x:Int) (y:Int) -> x

---

(source_file
  (script
    (lambda
      (params
        (param
          (typing
            (identifier)
            (variable
              (identifier))))
        (param
          (typing
            (identifier)
            (variable
              (identifier)))))
      (explicit_arrow)
      (variable
        (identifier)))))

==================
Lambda with mixed params
==================

\x (y:Int) -> y

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier))
        (param
          (typing
            (identifier)
            (variable
              (identifier)))))
      (explicit_arrow)
      (variable
        (identifier)))))

==================
Lambda with fat arrow
==================

\x => x

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier)))
      (implicit_arrow)
      (variable
        (identifier)))))

==================
Lambda body with projection and application
==================

\x y -> x.f y

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier))
        (param
          (identifier)))
      (explicit_arrow)
      (application
        (projection
          (variable
            (identifier))
          (identifier))
        (argument
          (variable
            (identifier)))))))

==================
Lambda with record type
==================

\(x: { foo: int }) -> x.a

---

(source_file
  (script
    (lambda
      (params
        (param
          (typing
            (identifier)
            (struct
              (key_value
                (key
                  (field))
                (variable
                  (identifier)))))))
      (explicit_arrow)
      (projection
        (variable
          (identifier))
        (identifier)))))

==================
Pi type simple
==================

Int -> String

---

(source_file
  (script
    (arrow
      (domain
        (variable
          (identifier)))
      (explicit)
      (variable
        (identifier)))))

==================
Pi type right-associative
==================

Int -> String -> Bool

---

(source_file
  (script
    (arrow
      (domain
        (variable
          (identifier)))
      (explicit)
      (arrow
        (domain
          (variable
            (identifier)))
        (explicit)
        (variable
          (identifier))))))

==================
Pi with fat arrow
==================

Int => String

---

(source_file
  (script
    (arrow
      (domain
        (variable
          (identifier)))
      (implicit)
      (variable
        (identifier)))))

==================
Dependent pi type
==================

(x: Int) -> Int

---

(source_file
  (script
    (pi
      (domain
        (typing
          (identifier)
          (variable
            (identifier))))
      (explicit)
      (variable
        (identifier)))))

==================
Parenthesized type
==================

(Int)

---

(source_file
  (script
    (parenthesized
      (variable
        (identifier)))))

==================
Parenthesized complex type
==================

((a: Int) -> String)

---

(source_file
  (script
    (parenthesized
      (pi
        (domain
          (typing
            (identifier)
            (variable
              (identifier))))
        (explicit)
        (variable
          (identifier))))))

==================
Mu type
==================

μ list -> | #Nil Unit | #Cons {a, list}

---

(source_file
  (script
    (mu
      (identifier)
      (variant
        (tagged
          (identifier)
          (literal))
        (tagged
          (identifier)
          (tuple
            (variable
              (identifier))
            (variable
              (identifier))))))))
