test/corpus/letdecs.txt
==================
Simple letdec
==================

let x = 42

---

(source_file
  (script
    (letdec
      (identifier)
      (literal
        (number)))))

==================
Letdec with type
==================

let x : Int = 42

---

(source_file
  (script
    (letdec
      (identifier)
      (variable
        (identifier))
      (literal
        (number)))))

==================
Letdec with lambda value
==================

let f = \x -> x

---

(source_file
  (script
    (letdec
      (identifier)
      (lambda
        (params
          (param
            (identifier)))
        (explicit_arrow)
        (variable
          (identifier))))))

==================
Letdec with complex type
==================

let f : Int -> String = \x -> x

---

(source_file
  (script
    (letdec
      (identifier)
      (arrow
        (domain
          (variable
            (identifier)))
        (explicit)
        (variable
          (identifier)))
      (lambda
        (params
          (param
            (identifier)))
        (explicit_arrow)
        (variable
          (identifier))))))
