test/corpus/modal_types.txt
==================
Modal type without refinement
==================

<1> String

---

(source_file
  (script
    (modal
      (quantity)
      (variable
        (identifier)))))

==================
Modal type with 0 quantity
==================

<0> Type

---

(source_file
  (script
    (modal
      (quantity)
      (literal))))

==================
Modal type with * quantity
==================

<*> Type

---

(source_file
  (script
    (modal
      (quantity)
      (literal))))

==================
Type with refinement only
==================

Type [| \x -> true |]

---

(source_file
  (script
    (modal
      (literal)
      (lambda
        (params
          (param
            (identifier)))
        (explicit_arrow)
        (literal
          (boolean))))))

==================
Modal type with 1 quantity
==================

<1> Int [| \x -> x |]

---

(source_file
  (script
    (modal
      (quantity)
      (variable
        (identifier))
      (lambda
        (params
          (param
            (identifier)))
        (explicit_arrow)
        (variable
          (identifier))))))

==================
Modal type with quantity and refinement
==================

<*> Type [| \x -> x |]

---

(source_file
  (script
    (modal
      (quantity)
      (literal)
      (lambda
        (params
          (param
            (identifier)))
        (explicit_arrow)
        (variable
          (identifier))))))

==================
Modal with complex refinement
==================

<1> Int [| \x -> x > 0 |]

---

(source_file
  (script
    (modal
      (quantity)
      (variable
        (identifier))
      (lambda
        (params
          (param
            (identifier)))
        (explicit_arrow)
        (operation
          (variable
            (identifier))
          (literal
            (number)))))))
