test/corpus/precedence.txt
==================
Lambda with application
==================

\x -> f x

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier)))
      (explicit_arrow)
      (application
        (variable
          (identifier))
        (variable
          (identifier))))))

==================
Projection with application
==================

x.y z

---

(source_file
  (script
    (application
      (projection
        (variable
          (identifier))
        (identifier))
      (variable
        (identifier)))))

==================
Lambda with projection
==================

\x -> x.y

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier)))
      (explicit_arrow)
      (projection
        (variable
          (identifier))
        (identifier)))))

==================
Lambda with projection and application
==================

\x -> x.y z

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier)))
      (explicit_arrow)
      (application
        (projection
          (variable
            (identifier))
          (identifier))
        (variable
          (identifier))))))

==================
Lambda with chained projections
==================

\x -> x.y.z w

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier)))
      (explicit_arrow)
      (application
        (projection
          (projection
            (variable
              (identifier))
            (identifier))
          (identifier))
        (variable
          (identifier))))))

==================
Application chaining
==================

f a b

---

(source_file
  (script
    (application
      (application
        (variable
          (identifier))
        (variable
          (identifier)))
      (variable
        (identifier)))))

==================
Multiplicative binds tighter than additive
==================

1 + 2 * 3

---

(source_file
  (script
    (operation
      (literal
        (number))
      (operation
        (literal
          (number))
        (literal
          (number))))))

==================
Mixed arithmetic precedence
==================

a + b * c - d

---

(source_file
  (script
    (operation
      (operation
        (variable
          (identifier))
        (operation
          (variable
            (identifier))
          (variable
            (identifier))))
      (variable
        (identifier)))))

==================
Logical and binds tighter than or
==================

a && b || c

---

(source_file
  (script
    (operation
      (operation
        (variable
          (identifier))
        (variable
          (identifier)))
      (variable
        (identifier)))))

==================
Or binds looser than and
==================

a && b || c && d

---

(source_file
  (script
    (operation
      (operation
        (variable
          (identifier))
        (variable
          (identifier)))
      (operation
        (variable
          (identifier))
        (variable
          (identifier))))))

==================
Chained comparisons
==================

a < b && b < c

---

(source_file
  (script
    (operation
      (operation
        (variable
          (identifier))
        (variable
          (identifier)))
      (operation
        (variable
          (identifier))
        (variable
          (identifier))))))

==================
Pipeline operation forward
==================

a |> f

---

(source_file
  (script
    (operation
      (variable
        (identifier))
      (variable
        (identifier)))))

==================
Pipeline operation backward
==================

f <| x

---

(source_file
  (script
    (operation
      (variable
        (identifier))
      (variable
        (identifier)))))

==================
Equality comparison
==================

x == y

---

(source_file
  (script
    (operation
      (variable
        (identifier))
      (variable
        (identifier)))))

==================
Less than comparison
==================

a < b

---

(source_file
  (script
    (operation
      (variable
        (identifier))
      (variable
        (identifier)))))

==================
Greater than or equal
==================

a >= b

---

(source_file
  (script
    (operation
      (variable
        (identifier))
      (variable
        (identifier)))))

==================
Annotation with pi type
==================

\x -> y : Type -> Type

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier)))
      (explicit_arrow)
      (annotation
        (variable
          (identifier))
        (arrow
          (literal)
          (explicit_arrow)
          (literal))))))

==================
Pi with applications
==================

(a: Type) -> (b: Type) -> f a -> f b

---

(source_file
  (script
    (pi
      (typing
        (identifier)
        (literal))
      (explicit_arrow)
      (pi
        (typing
          (identifier)
          (literal))
        (explicit_arrow)
        (arrow
          (application
            (variable
              (identifier))
            (variable
              (identifier)))
          (explicit_arrow)
          (application
            (variable
              (identifier))
            (variable
              (identifier))))))))

==================
Pi with struct
==================

(a: Type) -> (b: Type) -> { x: a, y: b }

---

(source_file
  (script
    (pi
      (typing
        (identifier)
        (literal))
      (explicit_arrow)
      (pi
        (typing
          (identifier)
          (literal))
        (explicit_arrow)
        (struct
          (key_value
            (key
              (field))
            (variable
              (identifier)))
          (key_value
            (key
              (field))
            (variable
              (identifier))))))))

==================
Implicit application with @
==================

f @ x

---

(source_file
  (script
    (application
      (variable
        (identifier))
      (implicit_application)
      (variable
        (identifier)))))
