test/corpus/shift_reset.txt
==================
Reset expression
==================

reset x

---

(source_file
  (script
    (reset
      (variable
        (identifier)))))

==================
Shift expression
==================

shift x

---

(source_file
  (script
    (shift
      (variable
        (identifier)))))

==================
Resume expression
==================

resume x

---

(source_file
  (script
    (resume
      (variable
        (identifier)))))

==================
Reset with application
==================

reset f x

---

(source_file
  (script
    (reset
      (application
        (variable
          (identifier))
        (argument
          (variable
            (identifier)))))))

==================
Reset with lambda
==================

reset \x -> x

---

(source_file
  (script
    (reset
      (lambda
        (params
          (param
            (identifier)))
        (explicit_arrow)
        (variable
          (identifier))))))

==================
Shift with injection
==================

shift { x | y = 1 }

---

(source_file
  (script
    (shift
      (injection
        (variable
          (identifier))
        (assignment
          (identifier)
          (literal
            (number)))))))

==================
Reset in lambda body
==================

\x -> reset y

---

(source_file
  (script
    (lambda
      (params
        (param
          (identifier)))
      (explicit_arrow)
      (reset
        (variable
          (identifier))))))

==================
Shift in application context
==================

f (shift x)

---

(source_file
  (script
    (application
      (variable
        (identifier))
      (argument
        (parenthesized
          (shift
            (variable
              (identifier))))))))

==================
Nested reset-shift
==================

reset shift x

---

(source_file
  (script
    (reset
      (shift
        (variable
          (identifier))))))

==================
Chained reset-shift-resume
==================

reset shift resume x

---

(source_file
  (script
    (reset
      (shift
        (resume
          (variable
            (identifier)))))))
